--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "Copyright - Martin-D. Lacasse (2023)\n",
     "\n",
-    "Disclaimers: *I am not a financial planner. You make your own decisions. This program comes with no garantee. Use at your own risk.*"
+    "Disclaimers: *I am not a financial planner. You make your own decisions. This program comes with no guarantee. Use at your own risk.*"
    ]
   },
   {
@@ -49,13 +49,13 @@
    "id": "c2939c06-b407-48fb-91d7-560cd96d5206",
    "metadata": {},
    "source": [
-    "This notebook describes the case of Sam, a ficticious individual used for demonstrating the conditions required for the so-called 4% rule. This case considers no pension, no social security benefits, just a portfolio of a tax-deferred account with 50% stocks and 50% bounds. This scenario is then tested to survive sequences of historical rates, particularly the ones which happened in 1966.\n",
+    "This notebook describes the case of Sam, a fictitious individual used for demonstrating the conditions required for the so-called 4% rule. This case considers no pension, no social security benefits, just a portfolio of a tax-deferred account with 50% stocks and 50% bounds. This scenario is then tested to survive sequences of historical rates, particularly the ones which happened in 1966.\n",
     "\n",
-    "The article that popularized the 4% rule is from William Bengen (Journal of Financial Planning, October 1994). The scenario consists of looking at the longevity of a 50% common stocks and 50% intermediate-term Treasury notes portfolio under a variety of withdrawal rates and depending on the historical year that the individual started her retirement. Cases considered consisted of witdrawal rates from 1% to 6%, to be determined on the balance of a single tax-deferred account at the first year of retirement and then be indexed for inflation. These scenarios highlight the effect of sequence of returns through using historical data.\n",
+    "The article that popularized the 4% rule is from William Bengen (Journal of Financial Planning, October 1994). The scenario consists of looking at the longevity of a 50% common stocks and 50% intermediate-term Treasury notes portfolio under a variety of withdrawal rates and depending on the historical year that the individual started her retirement. Cases considered consisted of withdrawal rates from 1% to 6%, to be determined on the balance of a single tax-deferred account at the first year of retirement and then be indexed for inflation. These scenarios highlight the effect of sequence of returns through using historical data.\n",
     "\n",
     "The original claim is that a withdrawal rate of 4% of the portfolio at the first year of retirement would be sustainable for a 30-year retirement period. These withdrawals are then adjusted for inflation and no income tax is considered. To avoid triggering the income tax machinery in ARP Lab, we will use an unrealistically small amount of \\\\$2k per year to be withdrawn from a single \\\\$50k tax-deferred account. As this scenario is meant to explore the effects of a percentage, multiplying all the numbers by 20 will convert the results of withdrawing \\\\$40k from a \\\\$1M portfolio. This can obviously be done for any other portfolio balance of interest.\n",
     "\n",
-    "Note that Bengen used data from Ibbotson's SBBI (Stocks, Bonds, Bills, Inflation) Yearbook while the data used in ARP Lab is from the NYU Stern business school. There will be slight discrepencies in the number of years that the accounts can sustain due to the slight difference in the rates used. As a results, the investment portfolios in ARP Lab last a little shorter than those originally obtained by Bengen. The trends and conclusions are the same however."
+    "Note that Bengen used data from Ibbotson's SBBI (Stocks, Bonds, Bills, Inflation) Yearbook while the data used in ARP Lab is from the NYU Stern business school. There will be slight discrepancies in the number of years that the accounts can sustain due to the slight difference in the rates used. As a results, the investment portfolios in ARP Lab last a little shorter than those originally obtained by Bengen. The trends and conclusions are the same however."
    ]
   },
   {
@@ -98,9 +98,9 @@
     "## Initializing the realization\n",
     "In order to be able to generate a realization of the future, one must start with providing the year of birth of each spouse(s) and their expected lifespan(s).\n",
     "\n",
-    "For selecting your own numbers, there are plenty of longivity predictors on the web. Pick your favorite:\n",
+    "For selecting your own numbers, there are plenty of longevity predictors on the web. Pick your favorite:\n",
     "\n",
-    "https://longivityillustrator.org\n",
+    "https://longevityillustrator.org\n",
     "\n",
     "https://www.livingto100.com/calculator\n",
     "\n",
@@ -227,7 +227,7 @@
     "\n",
     "    plan.setPension([0, 0], [65, 65])\n",
     "    \n",
-    "For social security, one must provide the predicted amount(s) and the starting age(s) at which benefits are anticipated to be received. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov). Another interesing calculator can be found at www.opensocialsecurity.com. This calculator allows you to compare different scenarios regarding your commencement age through a sensitivity plot.\n"
+    "For social security, one must provide the predicted amount(s) and the starting age(s) at which benefits are anticipated to be received. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov). Another interesting calculator can be found at www.opensocialsecurity.com. This calculator allows you to compare different scenarios regarding your commencement age through a sensitivity plot.\n"
    ]
   },
   {
@@ -265,7 +265,7 @@
     "| ... | | | | | | | | |\n",
     "|20XX | | | | | | | | |\n",
     "\n",
-    "Here, 20XX is the last row that is the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
+    "Here, 20XX is the last row that is the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employment or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
     "\n",
     "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden. Therefore there is no need to enter a retirement age for the sole purpose of quantifying your financial future.\n",
     "\n",
@@ -306,7 +306,7 @@
    },
    "source": [
     "## How much net income is desirable at retirement?\n",
-    "For determining the desirable annual net income in retirement, certified planners will strongly suggest that you've must have already done a cashflow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement. Another approach is to experiment with multiple spending scenarios and see what your current and future savings can sustain under different market conditions. As one nears retirement, both approaches will need to meet at one point.\n",
+    "For determining the desirable annual net income in retirement, certified planners will strongly suggest that you've must have already done a cash flow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement. Another approach is to experiment with multiple spending scenarios and see what your current and future savings can sustain under different market conditions. As one nears retirement, both approaches will need to meet at one point.\n",
     "\n",
     "The desired income defined here is the minimum annual **net** income (i.e., after paying federal income tax) that one would like to have starting at her/his \"retirement age\" (we will provide a loose definition of the term *retirement age* below). This desired income must be adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will only be adjusted for inflation.\n",
     "\n",
@@ -338,7 +338,7 @@
    "source": [
     "## How to withdraw from spousal accounts?\n",
     "It can be desirable for couples to determine how to make distributions from each spousal account.\n",
-    "By specifying an *auto* spousal split, the withdrawals from the retirement savings accounts will be made proportial to their respective balances. It can also be specified as a fixed fractional value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse, at this risk of depleting one account before the other, and running short on income.\n",
+    "By specifying an *auto* spousal split, the withdrawals from the retirement savings accounts will be made proportional to their respective balances. It can also be specified as a fixed fractional value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse, at this risk of depleting one account before the other, and running short on income.\n",
     "\n",
     "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to better coordinate spousal accounts.\n"
    ]
@@ -374,7 +374,7 @@
     "Rates of return for each class of assets can be specified, including the rate of inflation.\n",
     "These are important components for  future assumptions.\n",
     "Setting future rates is done with the `setRates()` method from which one can select different\n",
-    "sources for determining the ratesfor.\n",
+    "sources for determining the rates.\n",
     "Valid choices are *historical*, *stochastic*, *average*, 'fixed', or 'default'.\n",
     "\n",
     "For the *historical*, *stochastic*, and *average* options, data from 1928 to the last year are available for experimenting.\n",
@@ -401,7 +401,7 @@
     "\n",
     "    plan.setRates('stochastic', 1945)\n",
     "    \n",
-    "will analyze the annual rates from 1945 up to last-year and compute means and covariance to generate new data that are statistically representative of the ones observed during this selected time period. The rates randomly generated for the timespan can be plotted and examined as we will see below. Similarly,\n",
+    "will analyze the annual rates from 1945 up to last-year and compute means and covariance to generate new data that are statistically representative of the ones observed during this selected time period. The rates randomly generated for the time span can be plotted and examined as we will see below. Similarly,\n",
     "\n",
     "    plan.setRates('stochastic', 1940, 1970)\n",
     "\n",
@@ -418,9 +418,9 @@
     "    myrates = [9.6, 4.0, 3.0, 3.8]\n",
     "    plan.setRates('fixed', values=myrates)\n",
     "    \n",
-    "This example would use fixed rates of 9.6%, 4.0%, 3.0%, and 3.8% as average annual returns on S&P500, corporate bonds, Treasury notes, and common assets, respectively, with an average annual inflation rate of 3.8% for the full duration of the time simulation. Recall that the common assets class consists of investments tracking inflation only. Therefore the last index serves both to track the common asset class and to adjust values for inflation.\n",
+    "This example would use fixed rates of 9.6%, 4.0%, 3.0%, and 3.8% as average annual returns on S&P 500, corporate bonds, Treasury notes, and common assets, respectively, with an average annual inflation rate of 3.8% for the full duration of the time simulation. Recall that the common assets class consists of investments tracking inflation only. Therefore the last index serves both to track the common asset class and to adjust values for inflation.\n",
     "\n",
-    "Also note that the S&P500 rates provided always include dividends, which are assumed to be reinvested.\n"
+    "Also note that the S&P 500 rates provided always include dividends, which are assumed to be reinvested.\n"
    ]
   },
   {
@@ -523,7 +523,7 @@
    "metadata": {},
    "source": [
     "### Show sources of income over the years\n",
-    "Income will typically come from mutiple sources, and it can be quite complex. This graphs shows the breakdown of Jack and Jill's sources of income by spouse and by origin. Note that distributions from tax-deferred accounts (*dist*) are distinguished from required minimum distributions (*rmd*) as they serve different purposes. Other labels should be self-explanatory. An extra title label *Sam* is passed to the function."
+    "Income will typically come from multiple sources, and it can be quite complex. This graphs shows the breakdown of Jack and Jill's sources of income by spouse and by origin. Note that distributions from tax-deferred accounts (*dist*) are distinguished from required minimum distributions (*rmd*) as they serve different purposes. Other labels should be self-explanatory. An extra title label *Sam* is passed to the function."
    ]
   },
   {
@@ -666,7 +666,7 @@
    "metadata": {},
    "source": [
     "## Can we save this realization?\n",
-    "This instance of a future realization contains information on the distribution amounts, including the required minimum distribution that had to be performed under the given assumptions. This info can be saved in an excel workbook with one spreadsheet (tab) for each spouse. Worksheet will also contain annual rates, income, income taxes, and account balances. Second `True/False` argument controls if existing files get overwritten. Also remember that Windows will not allow the file to be overwriten while the file is being opened in Excel. In that case, the script will ask you to close the file and will retry to save."
+    "This instance of a future realization contains information on the distribution amounts, including the required minimum distribution that had to be performed under the given assumptions. This info can be saved in an excel workbook with one spreadsheet (tab) for each spouse. Worksheet will also contain annual rates, income, income taxes, and account balances. Second `True/False` argument controls if existing files get overwritten. Also remember that Windows will not allow the file to be overwritten while the file is being opened in Excel. In that case, the script will ask you to close the file and will retry to save."
    ]
   },
   {
@@ -695,7 +695,7 @@
    "metadata": {},
    "source": [
     "## Next level\n",
-    "ARP Lab allows one to run multiple simulations in one call. For example, one can run multiple historical cases over a range of years. In those simulations, multiple instances are executed to further explore the robustness of one's decisions under different market realizations. In another case, one can run a Monte-Carlo simulation in which ficticious rates derived from the statistical distribution of those observed in a selected time period are used for the time span of the simulation.\n"
+    "ARP Lab allows one to run multiple simulations in one call. For example, one can run multiple historical cases over a range of years. In those simulations, multiple instances are executed to further explore the robustness of one's decisions under different market realizations. In another case, one can run a Monte-Carlo simulation in which fictitious rates derived from the statistical distribution of those observed in a selected time period are used for the time span of the simulation.\n"
    ]
   },
   {
@@ -782,7 +782,7 @@
    "metadata": {},
    "source": [
     "## One more notch up for modeling\n",
-    "We can also run Roth conversion estate maximization strategies. Using commutativity of multiplication, one can easily demonstrate that there is no point in doing a Roth conversion if the tax rate to be paid on the conversion now is the same as the one to be paid on the distribution later. However, things are much more complex in reality, and one has to take RMDs in consideration on top of all other unknown factors that can happen, including changes in the tax code. For this purpose, a simple heuristical Roth optimizer is being developed. For now, the objective function is to maximize the estate amount left at the passing of the last spouse, considering a tax bracket on the taxable portion of the estate, and under the constraint of receiving a desired income. Function will return a new plan, and an array containing proposed Roth conversions. These conversions are not yet fully optimal, as the current algorithm is biased towards early conversions.\n",
+    "We can also run Roth conversion estate maximization strategies. Using commutativity of multiplication, one can easily demonstrate that there is no point in doing a Roth conversion if the tax rate to be paid on the conversion now is the same as the one to be paid on the distribution later. However, things are much more complex in reality, and one has to take RMDs in consideration on top of all other unknown factors that can happen, including changes in the tax code. For this purpose, a simple heuristical Roth optimizer maximizes the estate amount left at the passing of the last spouse, considering a tax bracket on the taxable portion of the estate, and under the constraint of receiving a desired income. Function will return a new plan, and an array containing proposed Roth conversions.\n",
     "\n",
     "Here is an example of how it works: "
    ]
