--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Copyright - Martin-D. Lacasse (2023)\n",
     "\n",
-    "Disclaimers: *I am not a financial planner. You make your own decisions. This program comes with no garantee. Use at your own risk.*"
+    "Disclaimers: *I am not a financial planner. You make your own decisions. This program comes with no guarantee. Use at your own risk.*"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "id": "cf3db9d8-1ddf-49a7-8c97-44ed9c74f85d",
    "metadata": {},
    "source": [
-    "This notebook exxplores the effects of coordinating assets between savings accounts and spouses."
+    "This notebook explores the effects of coordinating assets between savings accounts and spouses."
    ]
   },
   {
