--- a/roth.ipynb
+++ b/roth.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Copyright - Martin-D. Lacasse (2023)\n",
     "\n",
-    "Disclaimers: *I am not a financial planner. You make your own decisions. This program comes with no garantee. Use at your own risk.*"
+    "Disclaimers: *I am not a financial planner. You make your own decisions. This program comes with no guarantee. Use at your own risk.*"
    ]
   },
   {
@@ -308,7 +308,7 @@
    "id": "cca43877-9081-45ae-9948-55cdce7f7a6a",
    "metadata": {},
    "source": [
-    "Assuming a tax rate of 25% on the tax-deferred account for the heirs, Roth conversion could increase the value by \\\\$709k (in today's \\\\$).\n",
+    "Assuming a tax rate of 25% on the tax-deferred account for the heirs, Roth conversions could increase the value by close to \\\\$800k (in today's \\\\$).\n",
     "\n",
     "We can save all withdrawals and events using the `saveInstance()` function, instructing to overwrite the file if it exists."
    ]
@@ -329,7 +329,7 @@
    "id": "5425b20f-51bd-4e64-9273-2e6451683831",
    "metadata": {},
    "source": [
-    "Let's compare the two scenarios. In particular, compare the suggested conversions with the fluctuactions in the market. Also, the composition of the savings accounts at the end of life is quite different between the two cases."
+    "Let's compare the two scenarios. In particular, compare the suggested conversions with the fluctuactions in the market. Also, notice how the composition of the savings accounts at the end of life is quite different between the two cases."
    ]
   },
   {
@@ -364,7 +364,11 @@
     "### Brief analysis\n",
     "Note how the Roth conversions are timed with the spikes in rates of return, reinforcing the practice that making Roth conversion during the downturns of the market is an excellent strategy. Here, the Roth conversions are assumed to be done early in the year, before the annual rate of return is applied. As a results, conversions in the same year as when the market recovers is the best strategy. As we do not know when the market will bounce, we do know when the market goes down, and therefore a strategy of converting any time during a market large dip is good.\n",
     "\n",
-    "When tax-deferred assets are large, the RMDs can have a significant tax impact in the middle-to-late years of retirement. Roth conversion smooths out these income peaks by shifting the tax burden earlier in the retirement and avoiding large RMDs later in life. Moreover, coordinated accounts can maintain a balanced portfolio while shifting high-performance (but riskier) assets to a tax-free account, further reducing the tax burden on the remaining assets."
+    "When tax-deferred assets are large, the RMDs can have a significant tax impact in the middle-to-late years of retirement. Roth conversion smooths out these income peaks by shifting the tax burden earlier in the retirement and avoiding large RMDs later in life. Moreover, coordinated accounts can maintain a balanced portfolio while shifting high-performance (but riskier) assets to a tax-free account, further reducing the tax burden on the remaining assets.\n",
+    "\n",
+    "When return rates are constant, the proposed Roth conversions will tend to align with a given tax bracket (dashed lines), following common wisdom. The situation here is a combination of both, as it seems advantageous to break the tax bracket line for generating more return in a tax-free account during a swing of market recovery. \n",
+    "\n",
+    "Finally note that the Roth optimizer uses a random algorithm to find an approximation to the sequence of Roth conversions that would maximize wealth. Therefore, multiple consecutive runs can yield slightly different results, depending on the random sequence that was generated. This is just a nature of the algorithm, not a bug in the software. This uncertainty is certainly negligible compared to future tax laws and market fluctuations."
    ]
   },
   {
@@ -412,7 +416,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.5"
-  }
+  },
+  "toc-autonumbering": false,
+  "toc-showmarkdowntxt": false
  },
  "nbformat": 4,
  "nbformat_minor": 5
