--- a/template.ipynb
+++ b/template.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Copyright - Martin-D. Lacasse (2023)\n",
     "\n",
-    "Disclaimers: *I am not a financial planner. You make your own decisions. This program comes with no garantee. Use at your own risk.*"
+    "Disclaimers: *I am not a financial planner. You make your own decisions. This program comes with no guarantee. Use at your own risk.*"
    ]
   },
   {
@@ -93,9 +93,9 @@
     "## Initializing the realization\n",
     "In order to be able to generate a realization of the future, one must start with providing the year of birth of each spouse(s) and their expected lifespan(s).\n",
     "\n",
-    "For selecting your own numbers, there are plenty of longivity predictors on the web. Pick your favorite:\n",
+    "For selecting your own numbers, there are plenty of longevity predictors on the web. Pick your favorite:\n",
     "\n",
-    "https://longivityillustrator.org\n",
+    "https://longevityillustrator.org\n",
     "\n",
     "https://www.livingto100.com/calculator\n",
     "\n",
@@ -216,7 +216,7 @@
    "metadata": {},
    "source": [
     "#### Advanced assets allocation strategies\n",
-    "When savings account balances differ significantly between accounts, it might be beneficial to push one type of asset into a specific account. For example, stocks are more likely to grow in the long-term and therefore are better suited for tax-free accounts, while secure and less-performant assets are better held in taxable accounts where growth would be taxed. Therefore, one can maintain a balanced overall portfolio while shifting assets differently in specific savings accounts.\n",
+    "When savings account balances differ significantly between accounts, it might be beneficial to push one type of asset into a specific account. For example, stocks are more likely to grow in the long-term and therefore are better suited for tax-free accounts, while secure and lesser-performance assets are better held in taxable accounts where growth would be taxed. Therefore, one can maintain a balanced overall portfolio while shifting assets differently in specific savings accounts.\n",
     "\n",
     "In some other cases, it might be even more beneficial to coordinate both spousal accounts in order to optimize assets allocations. This is the case for example when only one spouse has a tax-free account. For these situations, we can instruct ARP Lab to coordinate assets allocations between spousal accounts.\n",
     "\n",
@@ -266,7 +266,7 @@
     "\n",
     "    plan.setPension([0, 0], [65, 65])\n",
     "    \n",
-    "For social security, one must provide the predicted amount(s) and the starting age(s) at which benefits are anticipated to be received. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov). Another interesing calculator can be found at www.opensocialsecurity.com. This last one allows you to compare different strategies through a sensitivity plot.\n"
+    "For social security, one must provide the predicted amount(s) and the starting age(s) at which benefits are anticipated to be received. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov). Another interesting calculator can be found at www.opensocialsecurity.com. This last one allows you to compare different strategies through a sensitivity plot.\n"
    ]
   },
   {
@@ -346,7 +346,7 @@
    },
    "source": [
     "## How much net income is desirable at retirement?\n",
-    "For determining the desirable annual net income in retirement, certified planners will strongly suggest that you've must have already done a cashflow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement. Another approach is to experiment with multiple spending scenarios and see what your current and future savings can sustain under different market conditions. As one nears retirement, both approaches will need to meet at one point.\n",
+    "For determining the desirable annual net income in retirement, certified planners will strongly suggest that you've must have already done a cash flow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement. Another approach is to experiment with multiple spending scenarios and see what your current and future savings can sustain under different market conditions. As one nears retirement, both approaches will need to meet at one point.\n",
     "\n",
     "The desired income defined here is the minimum annual **net** income (i.e., after paying federal income tax) that one would like to have starting at her/his \"retirement age\" (we will provide a loose definition the term *retirement age* below). This desired income must be adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will only be adjusted for inflation.\n",
     "\n",
@@ -378,7 +378,7 @@
    "source": [
     "## How to withdraw from spousal accounts?\n",
     "It can be desirable for couples to determine how to make distributions from each spousal account.\n",
-    "By specifying an *auto* spousal split, the withdrawals from the retirement savings accounts will be made proportial to their respective balances. It can also be specified as a fixed fractional value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse, at this risk of depleting one account before the other, and running short on income.\n",
+    "By specifying an *auto* spousal split, the withdrawals from the retirement savings accounts will be made proportional to their respective balances. It can also be specified as a fixed fractional value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse, at this risk of depleting one account before the other, and running short on income.\n",
     "\n",
     "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to better coordinate spousal accounts.\n"
    ]
@@ -439,7 +439,7 @@
     "\n",
     "    plan.setRates('stochastic', 1945)\n",
     "    \n",
-    "will analyze the annual rates from 1945 up to last-year and compute means and covariance to generate new data that is statistically representative of the ones observed in this data range. The rates randomly generated for the timespan can be plotted and examined as we will see below. Similarly,\n",
+    "will analyze the annual rates from 1945 up to last-year and compute means and covariance to generate new data that is statistically representative of the ones observed in this data range. The rates randomly generated for the time span can be plotted and examined as we will see below. Similarly,\n",
     "\n",
     "    plan.setRates('stochastic', 1940, 1970)\n",
     "\n",
@@ -456,9 +456,9 @@
     "    myrates = [9.6, 4.0, 3.0, 3.8]\n",
     "    plan.setRates(myrates)\n",
     "    \n",
-    "This example would use fixed rates of 9.6%, 4.0%, 3.0%, and 3.8% as average annual returns on S&P500, corporate bonds, Treasury notes, and common assets, respectively, with an average annual inflation rate of 3.8% for the full duration of the time simulation. Remember that the common assets class consists of investments tracking inflation only. Therefore the last index serves both to track the common asset class and to adjust values for inflation.\n",
+    "This example would use fixed rates of 9.6%, 4.0%, 3.0%, and 3.8% as average annual returns on S&P 500, corporate bonds, Treasury notes, and common assets, respectively, with an average annual inflation rate of 3.8% for the full duration of the time simulation. Remember that the common assets class consists of investments tracking inflation only. Therefore the last index serves both to track the common asset class and to adjust values for inflation.\n",
     "\n",
-    "Also note that the S&P500 rates provided always include dividends, which are assumed to be reinvested.\n"
+    "Also note that the S&P 500 rates provided always include dividends, which are assumed to be reinvested.\n"
    ]
   },
   {
@@ -563,7 +563,7 @@
    "metadata": {},
    "source": [
     "### Show sources of income over the years\n",
-    "Income will typically be coming from mutiple sources, and it can be quite complex. This graphs shows the breakdown of Jack and Jill's sources of income by spouse and by origin. Note that distributions from tax-deferred accounts (*dist*) are distinguished from required minimum distributions (*rmd*) as they serve different purposes. Other labels should be self-expanatory."
+    "Income will typically be coming from multiple sources, and it can be quite complex. This graphs shows the breakdown of Jack and Jill's sources of income by spouse and by origin. Note that distributions from tax-deferred accounts (*dist*) are distinguished from required minimum distributions (*rmd*) as they serve different purposes. Other labels should be self-explanatory."
    ]
   },
   {
@@ -735,7 +735,7 @@
    "metadata": {},
    "source": [
     "## Next level\n",
-    "ARP Lab allows one to run multiple simulations in one call. For example, one can run multiple historical cases over a range of years. In those simulations, multiple instances are executed to further explore the robustness of one's decisions under different market realizations. In another case, on can run a Monte-Carlo simulation in which ficticious rates derived from the statistical distribution of those observed in a selected time period are used for the time span of the simulation.\n"
+    "ARP Lab allows one to run multiple simulations in one call. For example, one can run multiple historical cases over a range of years. In those simulations, multiple instances are executed to further explore the robustness of one's decisions under different market realizations. In another case, on can run a Monte-Carlo simulation in which fictitious rates derived from the statistical distribution of those observed in a selected time period are used for the time span of the simulation.\n"
    ]
   },
   {
