Added s-curve and allocation graphs.

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -173,6 +173,59 @@
   },
   {
    "cell_type": "markdown",
+   "id": "de5a5c3f-bfad-4d95-a8ae-1d4f3d37661d",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## There must be a plan for savings\n",
+    "The most controllable part of retirement planning is the control one has over work income, contributions to savings accounts, Roth conversions, and other big spending items in the near- and mid-term future.\n",
+    "In order to execute a realization, one must provide an earning, saving, and Roth conversion plan. This is done through providing an Excel workbook with one spreadsheet (tab) per spouse with the following information:\n",
+    "\n",
+    "|year|anticipated income|ctrb taxable | ctrb 401k | ctrb Roth 401k | ctrb IRA | ctrb Roth IRA | Roth X | big ticket items|\n",
+    "|--|--|--|--|--|--|--|--|--|\n",
+    "|2023 | | | | | | | | |\n",
+    "|2024 | | | | | | | | |\n",
+    "| ... | | | | | | | | |\n",
+    "|20XX | | | | | | | | |\n",
+    "\n",
+    "Here, 20XX is the last row that is the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employment or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
+    "\n",
+    "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden. Therefore there is no need to enter a retirement age for the sole purpose of quantifying your financial future.\n",
+    "\n",
+    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. As this file is in Excel, one can use the native calculator to enter a percentage of the anticipated income for contributions as this can sometimes be easier.\n",
+    "\n",
+    "Roth conversion are specified in the column marked *Roth X*. Roth conversion are typically performed in the years when the income is lower (and therefore lower tax rates), typically in the bridge years between having a full-time regular salary and collecting social security.\n",
+    "\n",
+    "Finally, *big ticket items* are used for accounting for the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
+    "\n",
+    "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting the plan. In fact, ARP Lab extracts the names of these tabs to determine the individuals' names. Therefore, you need to rename these tabs to reflect your personal names if you want to accurately represent your case.\n",
+    "\n",
+    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b849a5f-7925-438d-a5c7-15130de43e09",
+   "metadata": {},
+   "source": [
+    "Jack and Jill has provided their specific information in the file *jack+jill.xlsx*. This worksheet file needs to have two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of the data provided before. Open this file in Excel and familiarize yourself with its contents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7748bcf1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plan.readContributions('jack+jill.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ea1d7ff",
    "metadata": {
     "tags": []
@@ -188,8 +241,10 @@
     "The total of percentages in each class of assets for each savings account must add to 100%.\n",
     "\n",
     "You are asked to provide assets allocation ratios for today, and ones for the time at the end of your life.\n",
-    "Values in between will be interpolated using a linear operator (for now). This can be useful\n",
-    "if you want to shift assets allocation as you age.\n"
+    "Values in between will be interpolated using a linear operator by default. This can be useful\n",
+    "if you want to shift assets allocation as you age. One can also select an *S* curve for transitioning\n",
+    "from the initial value to the final value. This is done by choosing *s-curve* instead of *linear* as the method for interpolation. *S-curve* take two additional parameters, the *center* of the change which defaults to 15 years from now, and the *width* which defaults to 5 years. These parameters will induce\n",
+    "a gradual change from the initial allocations now, starting to change in 10 years (15 - 5), and converging to final allocations in 20 years (15 + 5). \n"
    ]
   },
   {
@@ -261,7 +316,7 @@
     "# plan.setCoordinatedAR(initial=[60, 30, 5, 5], final=[50, 30, 5, 15])\n",
     "\n",
     "# An interpolation must follow either call for generating the data for all the years of the simulation.\n",
-    "# plan.interpolateAR('linear')"
+    "# plan.interpolateAR('s-curve', center=10, width=6)"
    ]
   },
   {
@@ -297,57 +352,6 @@
     "plan.setPension([0, 10000], [65, 65])\n",
     "\n",
     "plan.setSocialSecurity([28000, 25000], [70, 70])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c4672ab4-2a8c-4b28-a334-844be38bcabc",
-   "metadata": {},
-   "source": [
-    "## There must be a plan for savings\n",
-    "The most controllable part of retirement planning is the control one has over work income, contributions to savings accounts, Roth conversions, and other big spending items in the near- and mid-term future.\n",
-    "In order to execute a realization, one must provide an earning, saving, and Roth conversion plan. This is done through providing an Excel workbook with one spreadsheet (tab) per spouse with the following information:\n",
-    "\n",
-    "|year|anticipated income|ctrb taxable | ctrb 401k | ctrb Roth 401k | ctrb IRA | ctrb Roth IRA | Roth X | big ticket items|\n",
-    "|--|--|--|--|--|--|--|--|--|\n",
-    "|2023 | | | | | | | | |\n",
-    "|2024 | | | | | | | | |\n",
-    "| ... | | | | | | | | |\n",
-    "|20XX | | | | | | | | |\n",
-    "\n",
-    "Here, 20XX is the last row that is the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employment or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
-    "\n",
-    "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden. Therefore there is no need to enter a retirement age for the sole purpose of quantifying your financial future.\n",
-    "\n",
-    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. As this file is in Excel, one can use the native calculator to enter a percentage of the anticipated income for contributions as this can sometimes be easier.\n",
-    "\n",
-    "Roth conversion are specified in the column marked *Roth X*. Roth conversion are typically performed in the years when the income is lower (and therefore lower tax rates), typically in the bridge years between having a full-time regular salary and collecting social security.\n",
-    "\n",
-    "Finally, *big ticket items* are used for accounting for the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
-    "\n",
-    "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting the plan. In fact, ARP Lab extracts the names of these tabs to determine the individuals' names. Therefore, you need to rename these tabs to reflect your personal names if you want to accurately represent your case.\n",
-    "\n",
-    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ad5a5c05-2610-4ba0-9081-33bc181a645c",
-   "metadata": {},
-   "source": [
-    "Jack and Jill has provided their specific information in the file *jack+jill.xlsx*. This worksheet file needs to have two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of the data provided before. Open this file in Excel and familiarize yourself with its contents."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7748bcf1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plan.readContributions('jack+jill.xlsx')"
    ]
   },
   {
