--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -135,6 +135,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "405607fa-fe98-4311-899d-d4d2d1711e13",
+   "metadata": {},
+   "source": [
+    "## There must be a plan for savings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4032ddc5-9647-4e55-af7e-2d484f030c73",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "The couple has a few Roth conversions planned and a few more years to work. Open the Excel file to see the details. John is also planning a few Roth conversions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7748bcf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plan1.readContributions('mary+john.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a66905fe-dc39-4258-a52a-ac74f9e69865",
    "metadata": {},
    "source": [
@@ -224,32 +252,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fcb9d6a-f467-43ba-9fca-ebef69cce90d",
-   "metadata": {},
-   "source": [
-    "## There must be a plan for savings"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7cdb063d-fbbd-4d30-978c-edc69727fe67",
-   "metadata": {},
-   "source": [
-    "The couple has a few Roth conversions planned and a few more years to work. Open the Excel file to see the details. John is also planning a few Roth conversions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7748bcf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plan1.readContributions('mary+john.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a9ad4b1a-14cb-4487-8efa-d945d167282e",
    "metadata": {
     "tags": []
@@ -311,7 +313,8 @@
     "                taxDeferred=[[50, 30, 5, 15], [50, 30, 5, 15]],\n",
     "                taxFree=[[50, 30, 5, 15], [50, 30, 5, 15]])\n",
     "\n",
-    "plan1.interpolateAR('linear')"
+    "plan1.interpolateAR('s-curve')\n",
+    "plan1.showAllocations()"
    ]
   },
   {
@@ -334,7 +337,8 @@
     "plan2.setCoordinatedAR(initial=[[60, 30, 5, 5], [60, 30, 5, 5]], final=[[50, 30, 5, 15], [50, 30, 5, 15]])\n",
     "\n",
     "# An interpolation must follow either call for generating the data for all the years of the simulation.\n",
-    "plan2.interpolateAR('linear')"
+    "plan2.interpolateAR('linear')\n",
+    "plan2.showAllocations()"
    ]
   },
   {
@@ -359,7 +363,8 @@
     "plan3.setCoordinatedAR(initial=[60, 30, 5, 5], final=[50, 30, 5, 15])\n",
     "\n",
     "# An interpolation must follow either call for generating the data for all the years of the simulation.\n",
-    "plan3.interpolateAR('linear')"
+    "plan3.interpolateAR('s-curve')\n",
+    "plan3.showAllocations()"
    ]
   },
   {
