--- a/template.ipynb
+++ b/template.ipynb
@@ -165,6 +165,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "784a59d4-f8a9-46d9-a9ed-188fddb8e1d7",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## There must be a plan for savings\n",
+    "The most controllable part of retirement planning is the control one has over work income, contributions to savings accounts, Roth conversions, and other big spending items in the near- and mid-term future.\n",
+    "In order to execute a realization, one must provide an earning, saving, and Roth conversion plan. This is done through providing an Excel workbook with one spreadsheet (tab) per spouse with the following information:\n",
+    "\n",
+    "|year|anticipated income|ctrb taxable | ctrb 401k | ctrb Roth 401k | ctrb IRA | ctrb Roth IRA | Roth X | big ticket items|\n",
+    "|--|--|--|--|--|--|--|--|--|\n",
+    "|2023 | | | | | | | | |\n",
+    "|2024 | | | | | | | | |\n",
+    "| ... | | | | | | | | |\n",
+    "|20XX | | | | | | | | |\n",
+    "\n",
+    "Here, 20XX is the last row that is the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
+    "\n",
+    "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden. Therefore there is no need to enter a retirement age for the sole purpose of quantifying your financial future.\n",
+    "\n",
+    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. As this file is in Excel, one can use the native calculator to enter a percentage of the anticipated income for contributions as this can sometimes be easier.\n",
+    "\n",
+    "Roth conversion are specified in the column marked *Roth X*. Roth conversion are typically performed in the years when the income is lower (and therefore lower tax rates), typically in the bridge years between having a full-time regular salary and collecting social security.\n",
+    "\n",
+    "Finally, *big ticket items* are used for accounting for the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
+    "\n",
+    "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting the plan. In fact, ARP Lab uses the names of these tabs to determine the individuals' names.\n",
+    "\n",
+    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca6d29a6-aac2-44f5-80ee-981af2ad3cd6",
+   "metadata": {},
+   "source": [
+    "####  <span style='background:yellow'> Copy the template.xlsx file provided and edit it with your plan. Enter the name of your own file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7748bcf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plan.readContributions('myfile.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ea1d7ff",
    "metadata": {
     "tags": []
@@ -287,55 +338,6 @@
     "plan.setPension([0, 10000], [65, 65])\n",
     "\n",
     "plan.setSocialSecurity([30000, 28000], [70, 70])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4ef3e5a4",
-   "metadata": {},
-   "source": [
-    "## There must be a plan for savings\n",
-    "The most controllable part of retirement planning is the control one has over work income, contributions to savings accounts, Roth conversions, and other big spending items in the near- and mid-term future.\n",
-    "In order to execute a realization, one must provide an earning, saving, and Roth conversion plan. This is done through providing an Excel workbook with one spreadsheet (tab) per spouse with the following information:\n",
-    "\n",
-    "|year|anticipated income|ctrb taxable | ctrb 401k | ctrb Roth 401k | ctrb IRA | ctrb Roth IRA | Roth X | big ticket items|\n",
-    "|--|--|--|--|--|--|--|--|--|\n",
-    "|2023 | | | | | | | | |\n",
-    "|2024 | | | | | | | | |\n",
-    "| ... | | | | | | | | |\n",
-    "|20XX | | | | | | | | |\n",
-    "\n",
-    "Here, 20XX is the last row that is the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
-    "\n",
-    "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden. Therefore there is no need to enter a retirement age for the sole purpose of quantifying your financial future.\n",
-    "\n",
-    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. As this file is in Excel, one can use the native calculator to enter a percentage of the anticipated income for contributions as this can sometimes be easier.\n",
-    "\n",
-    "Roth conversion are specified in the column marked *Roth X*. Roth conversion are typically performed in the years when the income is lower (and therefore lower tax rates), typically in the bridge years between having a full-time regular salary and collecting social security.\n",
-    "\n",
-    "Finally, *big ticket items* are used for accounting for the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
-    "\n",
-    "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting the plan. In fact, ARP Lab uses the names of these tabs to determine the individuals' names.\n",
-    "\n",
-    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "029acbc5-419a-41b1-89d9-e91e46f04b75",
-   "metadata": {},
-   "source": [
-    "####  <span style='background:yellow'> Copy the template.xlsx file provided and edit it with your plan. Enter the name of your own file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7748bcf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plan.readContributions('myfile.xlsx')"
    ]
   },
   {
